Fixing navbar issues on mobile

--- a/Allen-Zhang/src/components/1-NavComponents/Navbar.css
+++ b/Allen-Zhang/src/components/1-NavComponents/Navbar.css
@@ -57,8 +57,8 @@
     transition: all 0.2s ease;
   }
 
-  .nav.active {
-    display: none;
+  .nav.default {
+    display: none; 
     top: 0;
   }
 
